Added blog for 2026-02-23

--- a/blog/src/content/posts/2026-02-23.md
+++ b/blog/src/content/posts/2026-02-23.md
@@ -1,27 +1,19 @@
 ---
-title: 'Whiteboard Creation'
-pubDate: 2026-02-09
-description: 'Excalidraw Integration as Whiteboard'
-author: 'Raj Jagadeesh A P'
-image: '/assets/whiteboard.png'
+title: 'Exploring Express JS'
+pubDate: 2026-02-23
+description: 'Explored necessary Express JS concepts for this project'
+author: 'TARUN B S'
+
 ---
 
-## Welcome to our Whiteboard page 
+## Express JS Explored 
 
-#### Published on: 2026-02-09
+#### Published on: 2026-02-23
 
-## **How it Works**:
+Today we have learnt about essential concepts to get the backend of our project running .
 
-- **Browser-Based & Local Storage:** Drawings are saved directly into your browser's local storage by default. You do not need an account to start, and it works offline.
-- **Selection & Creation:** The toolbar allows for basic shapes (rectangles, diamonds, ellipses), arrows, lines, and text.
-- **Editing:** Elements can be grouped, locked, or aligned.
+We have now mastered the concepts of 
 
-## **Key Features**: 
-
-1. Hand-Drawn Style: whiteboard like appearance, making it less formal and more collaborative.
-2. Collaborative: Supports real-time collaboration with other users.
-3. Export Options: Export drawings as PNG, SVG, or even as JSON for the open format.
-
-## **Credits**:
-
-We have integrated [Excalidraw](https://docs.excalidraw.com/docs) into our project.
+- routing  
+- storing user information  
+- handling the errors and confilcts gracefully
